<resources>
    <string name="app_name">One App Registration Demo</string>
    <string name="action_settings">Settings</string>

    <!-- Activity names -->
    <string name="activity_splash_screen">Splash Screen Activity</string>
    <string name="activity_login">Login Screen Activity</string>

    <!-- Fragment names -->
    <string name="fragment_tnc_title">Terms And Conditions</string>
    <string name="fragment_create_passcode_title">Create Passcode</string>
    <string name="fragment_your_address_title">Your Address</string>
    <string name="fragment_declaration">Declaration</string>
    <string name="fragment_document_upload_title">Document Upload</string>
    <string name="fragment_personal_detail_title">Personal Details</string>

    <!--Splash Screen-->
    <string name="splash_text">@string/app_name</string>

    <!--Generic strings-->
    <string name="loading">Loading</string>

    <!-- Create Passcode Screen -->
    <string name="create_passcode_guide_text">Please choose a 6 digit passcode. It needs to be a number you can remember, but others wouldn\'t guess</string>
    <string name="tip_text">Tip</string>
    <string name="tip_description_text">Not repeated or sequential numbers</string>
    <string name="enter_passcode_hint_text">Enter passcode</string>
    <string name="re_enter_passcode_hint_text">Re-enter passcode</string>
    <string name="passcode_validation_message_text">Passcode should not be empty.</string>
    <string name="re_enter_passcode_validation_message_text">Re-enter passcode field should not be empty.</string>
    <string name="re_enter_passcode_toast">Passcode and Re enter passcode should be same.</string>

    <!--Document Upload fragment -->
    <string name="documet_title">Kindly select the documents and upload to serve better in the registration process</string>
    <string name="adhaar">Adhaar Card</string>
    <string name="passport">Passport</string>
    <string name="pan">Pan Card</string>
    <string name="photo">Photo</string>
    <string name="continue_btn">Continue</string>
    <string name="select_image">Select Image</string>
    <string name="next_button_click_toast">Next Button Clicked!</string>

    <!-- Your address Fragment -->
    <string name="enter_address_text">Please enter your address</string>
    <string name="address_line1">Address line 1</string>
    <string name="address_line2">Address line 2</string>
    <string name="address_line3">Address line 3</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="blank">""</string>
    <string name="country_error_msg">Country should not be empty</string>
    <string name="city_error_msg">City should not be empty</string>
    <string name="state_error_msg">State should not be empty</string>
    <string name="address_line1_error_msg">address Line 1 should not be empty</string>

    <!--Login-->
    <string name="login_hint">Enter your X digit passcode</string>
    <string name="btn_sign_in_caption">SIGN IN</string>
    <string name="loginError">Please enter passcode again!</string>
    <string name="passcode_empty_error">Please enter 6 digit Passcode</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_successful">You have made successful Login</string>

    <!--Declaration-->
    <string name="declaration_text">Please read declaration below and check you are happy with it.</string>
    <string name="checkbox_understand_text">I understand how the Barclay guidelines protect my account.</string>
    <string name="checkbox_accepted_text">I have read the accepted the app term and condition and the declaration.</string>
    <string name="checkbox_agree_text">I agree to all term and condition and the declaration.</string>
    <string name="declaration_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
        has been the best standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <!--Options Menu-->
    <string name="next">Next</string>
    <string name="finish">Finish</string>


    <!--Personal Details-->
    <string name="tell_details">Please enter your details:</string>
    <string name="first_name">First Name *</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname *</string>
    <string name="date_of_birth">Date of birth *</string>
    <string name="nationality">Nationality *</string>
    <string name="empty_string">Field can not be empty</string>
    <string name="numeric_string">Numeric values not allowed </string>
    <string name="date_empty">Date can not be empty</string>
    <string name="dob_is_greater">DOB can not be greater than current date</string>
    <string name="personal_detail_title">Title *</string>
    <string name="select_title">Select Title</string>


    <string-array name="title_spinner">
        <item>Title *</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>
</resources>
