<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/txt_enter_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:text="@string/enter_address_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_address_line1"
        android:layout_below="@+id/txt_enter_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/address_line1"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edt_address_line2"
        android:layout_below="@+id/edt_address_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/address_line2"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edt_address_line3"
        android:layout_below="@+id/edt_address_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/address_line3"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edt_city"
        android:layout_below="@+id/edt_address_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/city"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edt_postal_code"
        android:layout_below="@+id/edt_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/postal_code"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="6"/>

    <EditText
        android:id="@+id/edt_state"
        android:layout_below="@+id/edt_postal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/state"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edt_country"
        android:layout_below="@+id/edt_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/country"
        android:imeOptions="actionDone"
        android:maxLines="1"/>
</RelativeLayout>