<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/declaration_text" />

        <CheckBox
            android:id="@+id/checkbox_understand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="@dimen/spacing_normal"
            android:text="@string/checkbox_understand_text" />

        <CheckBox
            android:id="@+id/checkbox_accepted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="@dimen/spacing_normal"
            android:text="@string/checkbox_accepted_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/declaration_description" />

        <CheckBox
            android:id="@+id/checkbox_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="@dimen/spacing_normal"
            android:text="@string/checkbox_agree_text" />

    </LinearLayout>
</RelativeLayout>