<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/create_passcode_guide_text"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/tip_text"
                android:textColor="@color/secondary_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_description_text"
                android:textColor="@color/secondary_text" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEnterPasscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_passcode_hint_text"
                android:inputType="numberPassword"
                android:maxLength="6" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextReEnterPasscode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_passcode_hint_text"
                android:inputType="numberPassword"
                android:maxLength="6" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>