<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/tv_string_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_large_xxxx"
        android:text="@string/tell_details"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_large"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_string_detail"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_title"
            style="@style/AppTheme.Spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large_xxxxx"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:background="@drawable/ic_personal_detail_border"
            android:layout_marginBottom="@dimen/spacing_medium"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large_xxxxx"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:background="@drawable/ic_personal_detail_border"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large_xxxxx"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:background="@drawable/ic_personal_detail_border"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_middle_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/middle_name"
                android:inputType="text"
                android:maxLines="1"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large_xxxxx"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:background="@drawable/ic_personal_detail_border"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/surname"
                android:inputType="text"
                android:maxLines="1"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large_xxxxx"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:background="@drawable/ic_personal_detail_border"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:background="@android:color/transparent"
                android:hint="@string/date_of_birth" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large_xxxxx"
            android:paddingBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            android:background="@drawable/ic_personal_detail_border"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_normal"
            android:paddingLeft="@dimen/spacing_normal"
            android:paddingRight="@dimen/spacing_normal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_nationality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nationality"
                android:inputType="text"
                android:maxLines="1"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>